# data_pipeline_api_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  DataPipeline.h  EERAModel_Data.md  HDF5IO.h  LICENSE.txt  Parameter.h  README.md
.github/workflows/: data_pipeline.yml
EERA_pipeline_demo/: CMakeLists.txt  EERA_pipeline_demo.cpp  EERA_types.h  EERA_types_toml.h
code_generator/: README.md  clang_util.py  h5type_generator.py
demo/: CMakeLists.txt  CodeGen_demo.cpp  CodeGen_types.h
examples/: CMakeLists.txt  CodeGen_demo.cpp  EERA_h5types.h  EERA_hw_h5types.h  EERA_pipeline_demo.cpp  EERA_types.h  EERA_types_toml.h  data_client_example.cpp  demo_hdf5_dataset.cpp
include/: Array.h  HDF5IO.h  HDF5_File_API.h  HDF5_TypeTraits.h  ParameterTypes.h  Restful.h  ResultTypes.h
tests/unit/: UtilitiesTest.cpp
